# FastAPI-GraphQL-MongoDB-Demo

./: .dockerignore  .gitignore  README.md  docker-compose.milvus-cluster.yml  docker-compose.yaml  docker-compose.yml  docker.env  example.env  graphql-requests.http  http-client.env.json  logging.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: app.Dockerfile  mongo.Dockerfile
.devcontainer/config/milvus/: migration.yaml  milvus.yaml
.devcontainer/config/mongo/: mongo-init.js  mongod.conf
.devcontainer/entrypoint/: entrypoint.sh
.github/workflow/: tests.yaml
.github/workflows/: api-tests.yml  tests.yml
MyLogger/: Config.py  Formatters.py  Handlers.py  Logger.py  Monitor.py  __init__.py
MyTypes/: type.py
api-docs/: openapi.json
database/: db.py
models/: Response.py  Users.py
routes/: index.py  startup.py  users.py
schema/: Users.py
src/: README.md  logging.json  main.py  pyproject.toml  setup.py
src/database/: db.py  milvus.py
src/milvus/: milvus_notebook.ipynb  search_article_in_medium.ipynb
src/models/: Response.py  Users.py
src/myLogger/: Config.py  Formatters.py  Handlers.py  Logger.py  Monitor.py  __init__.py
src/myTypes/: Field.py  type.py
src/routers/: index.py  startup.py  users.py
src/schema/: Response.py  Users.py  users.py
src/utils/: Field.py  hash.py  request_types.py
tests/: test_users.py
tests/logs/: pytest-logs.txt
utils/: Field.py  hash.py
