[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FastAPI_GraphQL_MongoDB_Demo"
version = "0.1.0"
description = "Demo of FastAPI and GraphQL integration"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
scripts = { main_cli = "main:app" }
keywords = ["FastAPI", "GraphQL", "MongoDB", "Python"]
authors = [
  { name="Dellius Alexander",  email="info@hyfisolutions.com" },
]

maintainers = [
    { name="Dellius Alexander", email="info@hyfisolutions.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "backports.zoneinfo>=0.2.1;python_version<=\"3.9\"",
    "bcrypt>=4.0.1",
    "fastapi>=0.95.1",
    "graphene>=3.2.2",
    "graphene-mongo>=0.2.15",
    "graphql-core>=3.2.3",
    "mongoengine>=0.24.2",
    "python-dotenv>=0.21.0",
    "pyOpenSSL",
    "uvicorn==0.21.1",
]

[project.urls]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
"Homepage" = "https://github.com/dellius-alexander/FastAPI-GraphQL-MongoDB-Demo.git"
"Bug_Tracker" = "https://github.com/dellius-alexander/FastAPI-GraphQL-MongoDB-Demo.git/issues"

[requires]
files=["requirements.txt"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-watch",
    "requests",
    "uvicorn[standard]",
]

[integrations]
mongodb = { version = "4.3.3" }
graphql = { version = "3.2.3" }

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --color=yes --trace"
testpaths = [
    "tests",
    "tests/integration",
]

[project.license]
file = "LICENSE"