[metadata]
name = "FastAPI-GraphQL-MongoDB-Demo"
version = 0.1.0
summary = "Demo of FastAPI and GraphQL integration"
description-file =
    README.md
author = Dellius Alexander
author_email = info@hyfisolutions.com
maintainer = info@hyfisolutions.com
maintainer_email = info@hyfisolutions.com
home_page = "https://github.com/dellius-alexander/FastAPI-GraphQL-MongoDB-Demo.git"
license =
    License :: OSI Approved :: LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: <license>
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[files]
packages =
    fastapi_graphql_demo

[entry_points]
console_scripts =
    start = "python3 -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    --verbose
    --cov
    --cov-report html
    --cov-report term
    --cov-report xml

[fastapi_graphql_demo]
max-line-length = 100
ignore = E501
exclude =
    .git,
    .tox,
    venv,
    .eggs,
    build,
    dist

[isort]
line_length=100
force_single_line=True
lines_after_imports=2
known_first_party=fastapi_graphql_demo

[coverage:run]
branch = true
omit =
    tests/*
    setup.py

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    if __name__ == .__main__.:

[aliases]
test=pytest tests